--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="splash_text">Created by:\nTomasz Morcinek</string>
     <string name="splash_application_button">Go to Application</string>
 
+    <string name="server_error_message">Error occurred while calling server API.</string>
+
 </resources>
