Adding EducationListFragment, its adaptera, RefreshProgressController, AbstractRecyclerViewAdapter.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="email_header">MY EMAIL</string>
     <string name="retry">RETRY</string>
 
+    <string name="education_list_title">Education List</string>
 </resources>
