--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="education_list_title">Education List</string>
     <string name="education_details_title">Education Details</string>
     <string name="content_description">list_item_image</string>
+    <string name="experience_list_title">Experience</string>
 </resources>
