Changing author title.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="splash_application_button">Go to Application</string>
 
     <string name="server_error_message">Error occurred while calling server API.</string>
-    <string name="author_title">About Me</string>
+    <string name="author_title">About Author</string>
     <string name="description_header">MY DESCRIPTION</string>
     <string name="email_header">MY EMAIL</string>
     <string name="retry">RETRY</string>
