Changing Button text in skill_details.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
 
     <string name="skill_title_header">Skill</string>
     <string name="refresh_action">Refresh</string>
+    <string name="see_example">See Example</string>
 </resources>
