ISSUE-9 Add information about used libraries in the project.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,6 @@
     <string name="skill_title_header">Skill</string>
     <string name="refresh_action">Refresh</string>
     <string name="see_example">See Example</string>
+
+    <string name="libraries_text">Open Source Libraries</string>
 </resources>
