Work in progress on handling contact clicks.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,6 @@
     <string name="see_example">See Example</string>
 
     <string name="libraries_text">Open Source Libraries</string>
+
+    <string name="action_mail_subject">Showcase Application Query</string>
 </resources>
