--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,5 +38,5 @@
 
     <string name="action_mail_subject">Showcase Application Query</string>
     <string name="action_play_title">Developed Applications</string>
-    <string name="action_line_message">LineId added to clipboard</string>
+    <string name="action_copy_message">%s added to clipboard</string>
 </resources>
